--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=project
 server.port=8081
 
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+server.servlet.encoding.force-response=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.description.sql.BasicBinder=TRACE
 
 spring.datasource.username=sa
 spring.datasource.password=
