백엔드 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ logging.level.org.hibernate.type.description.sql.BasicBinder=TRACE
 
 spring.datasource.username=sa
 spring.datasource.password=
+
+server.servlet.session.timeout=3h
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.domain=localhost
+
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
